# code-radio-cli

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: Build.yml  CI.yml  Publish.yml
reference/: api_reference.jsonc  rest_api.jsonc  server_sent_events_api.txt
src/: args.rs  code_radio_api.rs  main.rs  model.rs  mp3_stream_decoder.rs  player.rs  stdout_flusher.rs  terminal.rs  update_checker.rs  utils.rs
src/models/: code_radio.rs  mod.rs  server_sent_events.rs
