[package]
name = "code-radio-cli"
description = "A command line music radio client for https://coderadio.freecodecamp.org"
version = "1.0.3"
authors = ["Jason Wei"]
edition = "2021"
readme = "README.md"

homepage = "https://github.com/JasonWei512/code-radio-cli"
repository = "https://github.com/JasonWei512/code-radio-cli"

keywords = ["cli", "music", "freecodecamp", "code-radio"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "code-radio"
path = "src/main.rs"

[dependencies]
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.56"
once_cell = "1.10.0"
futures-util = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rodio = "0.16.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
minimp3 = "0.5.1"
clap = { version = "3.1.18", features = ["derive"] }
indicatif = "0.17.1"
console = "0.15.0"
colored = "2.0.0"
version-compare = "0.1.0"
inquire = { version = "0.6.1", default-features = false, features = ["console"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
